llmd/cache/yaml/envoyfilter-extproc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: llm-d-sim-extproc
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: llm-d-lab-gateway
  configPatches:
  - applyTo: CLUSTER
    match:
      context: GATEWAY
    patch:
      operation: ADD
      value:
        name: llm-d-epp-extproc
        type: STRICT_DNS
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: llm-d-epp-extproc
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: llm-d-sim-epp.llm-d-lab.svc.cluster.local
                    port_value: 9002
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
          grpc_service:
            envoy_grpc:
              cluster_name: llm-d-epp-extproc
              authority: llm-d-sim-epp.llm-d-lab.svc.cluster.local
            timeout: 10s
          processing_mode:
            request_header_mode: SEND
            response_header_mode: SEND
            request_body_mode: FULL_DUPLEX_STREAMED
            response_body_mode: FULL_DUPLEX_STREAMED
            request_trailer_mode: SEND
            response_trailer_mode: SEND
          message_timeout: 1000s
