llmd/cache/yaml/route-external.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llm-d-lab-gateway
spec:
  port:
    targetPort: 443
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: llm-d-lab-gateway-data-science-gateway-class
    weight: 100
